Fix a billion warnings
Still a billion left (did ones I thought were important)